# hyperframevideo

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/: README.md
.scratch/composition-render/: PRD.md
.scratch/discovery-request/: PRD.md
.scratch/news-to-video-pipeline-mvp/: PRD.md
.scratch/pipeline-orchestrator/: PRD.md
.scratch/premium-news-karaoke-treatment/: PRD.md
.scratch/storyboard-artifact/: PRD.md
.scratch/voiceover-provider/: PRD.md
docs/: deep-research-hyperframes-report.md  future-extensions.md
docs/adr/: 0001-thin-voiceover-provider-interface.md  0002-cli-agent-first-mvp.md  0003-production-runs-as-file-artifacts.md  0004-local-first-execution-with-hyperframes-rendering.md  0005-use-hyperframes-as-dependency-not-fork.md  0006-start-with-direct-source-to-draft.md  0007-readability-first-source-extraction.md  0009-portable-script-drafting-prompt.md  (+4 more)
tests/: test_candidate_selector.py  test_cli.py  test_composition_documentation.py  test_composition_generator.py  test_discovery_engine.py  test_karaoke_captions.py  test_models.py  test_news_candidate_builder.py  test_pipeline_orchestrator.py  test_pipeline_progress.py  test_production_runs.py  test_script_approval.py  test_script_drafting.py  test_script_scenes.py  test_source_evidence.py  test_source_extractor.py  test_story_artifacts.py  test_storyboard_documentation.py  test_storyboard_generator.py  test_storyboard_planning.py  test_treatment_config.py  test_voiceover_documentation.py  test_voiceover_provider.py  test_voiceover_segments.py  test_voiceover_timing.py
(+88 files in other folders)
