[project]
name = "hyperframevideo"
version = "0.1.0"
description = "Local-first News-to-Video Pipeline powered by HyperFrames."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.15.0",
    "duckduckgo-search>=8.1.1",
    "playwright>=1.60.0",
    "readability-lxml>=0.8.4.1",
]

[project.scripts]
hyperframe-video = "hyperframevideo.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/hyperframevideo"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
